--- a/index.html
+++ b/index.html
@@ -20,80 +20,90 @@
     <!-- HEADER -->
     <header>
       <div class="container">
-        <h3 class="header-title" >Product name</h3>
-        <nav class="navigation">
-          <ul class="navigation__list">
-            <li class="navigation__item">
-              <a class="navigation__link" href="./about.html">About</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Collection</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="menu" href="#"
-          ><img src="./images/desktop/menu.png" alt="menu icon"
-        /></a>
-        <!-- <a href="#"><img src="./images/mobile/hamburger.png" alt="menu icon"></a> -->
+        <div class="header-wrapper">
+          <nav class="navigation">
+            <h3 class="header-title">Product name</h3>
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a class="navigation__link" href="./about.html">About</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Collection</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="menu__link" href="#"
+            ><img
+              class="menu__img"
+              src="./images/desktop/menu.png"
+              alt="menu icon"
+          /></a>
+          <!-- <a href="#"><img src="./images/mobile/hamburger.png" alt="menu icon"></a> -->
+        </div>
       </div>
     </header>
 
     <main>
       <!-- HERO -->
-      <section class="section">
-        <div class="container">
-          <img src="./images/desktop/hero Rectangle 7.jpg" alt="" />
-        </div>
+      <section class="section hero__section">
+        <!-- <img class="hero__img"
+          src="./images/desktop/hero_rectangle_7.jpg"
+          alt="a group of people during classes"
+        /> -->
+        <!-- <div class="container">
+        </div> -->
       </section>
 
       <!-- COLLECTION -->
-      <section class="section">
-        <div class="container">
+      <section class="section collection__section">
+        <div class="container collection__container">
           <div class="collection-top">
             <h2 class="collection-top__header">Collection</h2>
             <button class="button" type="button">see all</button>
           </div>
 
-          <div class="collection-wrapper">
-            <ul class="collection__list">
-              <li class="collection__item">
-                <a  class="collection__link" href="#">
-                  <img  class="collection__img"
-                    src="./images/item Rectangle 6.jpg"
-                    alt="item of collection"
-                  />
-                  <p class="collection__item-name">Collection item</p>
-                </a>
-              </li>
-               <li class="collection__item">
-                <a  class="collection__link" href="#">
-                  <img  class="collection__img"
-                    src="./images/item Rectangle 6.jpg"
-                    alt="item of collection"
-                  />
-                  <p class="collection__item-name">Collection item</p>
-                </a>
-              </li>
-               <li class="collection__item">
-                <a  class="collection__link" href="#">
-                  <img  class="collection__img"
-                    src="./images/item Rectangle 6.jpg"
-                    alt="item of collection"
-                  />
-                  <p class="collection__item-name">Collection item</p>
-                </a>
-              </li>
-               <li class="collection__item">
-                <a  class="collection__link" href="#">
-                  <img  class="collection__img"
-                    src="./images/item Rectangle 6.jpg"
-                    alt="item of collection"
-                  />
-                  <p class="collection__item-name">Collection item</p>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="collection__list">
+            <li class="collection__item">
+              <a class="collection__link" href="#">
+                <img
+                  class="collection__img"
+                  src="./images/item Rectangle 6.jpg"
+                  alt="item of collection"
+                />
+                <p class="collection__item-name">Collection item</p>
+              </a>
+            </li>
+            <li class="collection__item">
+              <a class="collection__link" href="#">
+                <img
+                  class="collection__img"
+                  src="./images/item Rectangle 6.jpg"
+                  alt="item of collection"
+                />
+                <p class="collection__item-name">Collection item</p>
+              </a>
+            </li>
+            <li class="collection__item">
+              <a class="collection__link" href="#">
+                <img
+                  class="collection__img"
+                  src="./images/item Rectangle 6.jpg"
+                  alt="item of collection"
+                />
+                <p class="collection__item-name">Collection item</p>
+              </a>
+            </li>
+            <li class="collection__item">
+              <a class="collection__link" href="#">
+                <img
+                  class="collection__img"
+                  src="./images/item Rectangle 6.jpg"
+                  alt="item of collection"
+                />
+                <p class="collection__item-name">Collection item</p>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
