--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
@@ -22,7 +26,7 @@
       <div class="container">
         <div class="header-wrapper">
           <nav class="navigation">
-            <h3 class="header-title">Product name</h3>
+            <h3 class="header-title animate__animated animate__headShake" >Product name</h3>
             <ul class="navigation__list">
               <li class="navigation__item">
                 <a class="navigation__link" href="./about.html">About</a>
