--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap"
@@ -21,7 +22,7 @@
     <title>Recruitment Design</title>
   </head>
   <body>
-    <!-- HEADER -->
+    <!-- HEADER - NAV -->
     <header>
       <div class="container">
         <div class="header-wrapper">
