--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
               </li>
             </ul>
           </nav>
-          <a class="menu__link" href="#"
+          <a class="desktop-menu__link" href="#"
             ><img
-              class="menu__img"
+              class="desktop-menu__img"
               src="./images/desktop/menu.png"
               alt="menu icon"
           /></a>
-          <!-- <a href="#"><img src="./images/mobile/hamburger.png" alt="menu icon"></a> -->
+          <a class="mobile-menu__link" href="#"><img class="mobile-menu__img" src="./images/mobile/hamburger.png" alt="menu icon"></a>
         </div>
       </div>
     </header>
