hero poprawki, responsywne grafiki

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
               <a class="collection__link" href="#">
                 <img
                   class="collection__img"
-                  src="./images/item Rectangle 6.jpg"
+                  src="./images/item_rectangle_6.jpg"
+                  srcset="./images/item_rectangle_6@2x.jpg 2x"
                   alt="item of collection"
                 />
                 <p class="collection__item-name">Collection item</p>
@@ -82,7 +83,8 @@
               <a class="collection__link" href="#">
                 <img
                   class="collection__img"
-                  src="./images/item Rectangle 6.jpg"
+                  src="./images/item_rectangle_6.jpg"
+                  srcset="./images/item_rectangle_6@2x.jpg 2x"
                   alt="item of collection"
                 />
                 <p class="collection__item-name">Collection item</p>
@@ -92,7 +94,8 @@
               <a class="collection__link" href="#">
                 <img
                   class="collection__img"
-                  src="./images/item Rectangle 6.jpg"
+                  src="./images/item_rectangle_6.jpg"
+                  srcset="./images/item_rectangle_6@2x.jpg 2x"
                   alt="item of collection"
                 />
                 <p class="collection__item-name">Collection item</p>
@@ -102,7 +105,8 @@
               <a class="collection__link" href="#">
                 <img
                   class="collection__img"
-                  src="./images/item Rectangle 6.jpg"
+                  src="./images/item_rectangle_6.jpg"
+                  srcset="./images/item_rectangle_6@2x.jpg 2x"
                   alt="item of collection"
                 />
                 <p class="collection__item-name">Collection item</p>
