--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
       <div class="container">
         <div class="header-wrapper">
           <nav class="navigation">
-            <h3 class="header-title animate__animated animate__headShake" >Product name</h3>
+            <h3 class="header-title animate__animated animate__headShake">
+              Product name
+            </h3>
             <ul class="navigation__list">
               <li class="navigation__item">
                 <a class="navigation__link" href="./about.html">About</a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link" href="#">Collection</a>
+                <a class="navigation__link" href="./collection.html"
+                  >Collection</a
+                >
               </li>
             </ul>
           </nav>
@@ -43,7 +47,12 @@
               src="./images/desktop/menu.png"
               alt="menu icon"
           /></a>
-          <a class="mobile-menu__link" href="#"><img class="mobile-menu__img" src="./images/mobile/hamburger.png" alt="menu icon"></a>
+          <a class="mobile-menu__link" href="#"
+            ><img
+              class="mobile-menu__img"
+              src="./images/mobile/hamburger.png"
+              alt="menu icon"
+          /></a>
         </div>
       </div>
     </header>
@@ -65,6 +74,7 @@
           <div class="collection-top">
             <h2 class="collection-top__header">Collection</h2>
             <button class="button" type="button">see all</button>
+            <!-- <a class="button__link" href="./collection.html"><button class="button" type="button">see all</button></a> -->
           </div>
 
           <ul class="collection__list">
@@ -117,5 +127,6 @@
       </section>
     </main>
     <footer>Joanna Gołofit</footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
