--- a/item.html
+++ b/item.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Collection Item</title>
-</head>
-<body>
-  Item
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Collection Item</title>
+  </head>
+  <body>
+    <!-- HEADER - NAV -->
+    <header class="header__item">
+      <div class="container">
+        <div class="header-wrapper">
+          <nav class="navigation">
+            <h3 class="header-title animate__animated animate__headShake light">
+              Product name
+            </h3>
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a class="navigation__link light" href="./about.html">About</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link light" href="./collection.html"
+                  >Collection</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <a class="desktop-menu__link" href="#"
+            ><img
+              class="desktop-menu__img"
+              src="./images/desktop/menu.png"
+              alt="menu icon"
+          /></a>
+          <a class="mobile-menu__link" href="#"
+            ><img
+              class="mobile-menu__img"
+              src="./images/mobile/hamburger.png"
+              alt="menu icon"
+          /></a>
+        </div>
+      </div>
+    </header>
+    <main>
+     
+      <!-- Coordinates -->
+      <section class="section">
+        <div class="container coordinates__container">
+          <a class="coordinates__link underline" href="./index.html">Home</a>
+          <p  class="coordinates__text">/</p>
+          <a class="coordinates__link underline" href="./about.html">About</a>
+          <p  class="coordinates__text">/</p>
+          <a class="coordinates__link" href="./item.html">Collection item</a>
+        </div>
+      </section>
+
+      <!-- Article -->
+      <!-- <section class="section">
+        <div class="container article__container">
+          <div class="article__text-wrapper">
+            <h2 class="article__header">Heading</h2>
+            <p class="article__text">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+            </p>
+          </div>
+        </div>
+      </section> -->
+    </main>
+  </body>
 </html>
